# fastapi-json-logger

./: .gitignore  README.md  pyproject.toml
fastapi-application/: .env.template  create_fastapi_app.py  default_logger_cfg.yaml  main.py  run_main.py
fastapi-application/api/: __init__.py
fastapi-application/api/api_v1/: __init__.py
fastapi-application/api/api_v1/public/: views.py
fastapi-application/core/: config.py
fastapi-application/core/gunicorn/: __init__.py  app_options.py  application.py  logger.py
fastapi-application/tests/: conftest.py  test_log_fastapi.py  test_log_filters.py
fastapi-application/utils/json_logger/: json_log_formatter.py  log_filters.py  log_handlers.py  middlewares.py  schemas.py  setup.py
