[project]
name = "async-json-logger-fastapi"
version = "0.1.0"
description = "Asynchronous json logger for FastAPI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.9.1",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
]
